// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageUploader renders correctly 1`] = `
<div
  className="uploaderWrapper"
  onClick={[Function]}
>
  Hello World
  <div
    className="hoverContainer"
  >
    <svg
      data-filename="assets/icons/camera.svg"
    />
  </div>
</div>
`;

exports[`ImageUploader renders correctly with mobile upload indicator 1`] = `
<div
  className="uploaderWrapper"
  onClick={[Function]}
>
  Hello World
  <div
    className="touchContainer"
  >
    <svg
      data-filename="assets/icons/camera.svg"
    />
  </div>
  <div
    className="hoverContainer"
  >
    <svg
      data-filename="assets/icons/camera.svg"
    />
  </div>
</div>
`;
